...
                permission = Permission.ViewAllShifts,
                onAuthorized = {
                    // view all shifts card
                    HomePageNavCards(
                        modifier = Modifier.weight(1f),
                        painterResourceId = R.drawable.icon_park_outline_list,
                        message = "View All Upcoming shifts",
                        onClickNavigation = { navigateToShiftList() },
                        buttonBackgroundColor = appColors.primarySuperLightAlternative,
                        buttonContainerColor = appColors.primarySuperLightAlternative,
                        buttonContentColor = appColors.primaryDarkAlternative,
                        cardBorderColor = appColors.primaryDarkAlternative
                    )
...
                permission = Permission.CreateShifts,
                onAuthorized = {
                    // create new shift card
                    HomePageNavCards(
                        modifier = Modifier.weight(1f),
                        painterResourceId = R.drawable.notes_svgrepo_com,
                        message = "Create a new shift",
                        onClickNavigation = { navigateToCreateShift() },
                        buttonBackgroundColor = appColors.primarySuperLight,
                        buttonContainerColor = appColors.primarySuperLight,
                        buttonContentColor = appColors.primaryDark,
                        cardBorderColor = appColors.primaryDark
                    )
...
        HomePageSpacer(20)

        Row(
            modifier = Modifier.align(Alignment.Start)
        ) {
            Text(
                text = "Next shift",
                style = TextStyle(
                    fontSize = 16.sp,
                    fontWeight = FontWeight(400),
                    color = appColors.primaryDark,
                    textAlign = TextAlign.Start,
                )
...
        HomePageSpacer(20)

        Row(
            modifier = Modifier.align(Alignment.Start)
        ) {
            Text(
                text = "Previously Completed",
                style = TextStyle(
                    fontSize = 16.sp,
                    fontWeight = FontWeight(400),
                    color = appColors.primaryDark,
                    textAlign = TextAlign.Start,
                )
...
